[#3205] Fix z-index issues

--- a/prewikka/htdocs/css/style.less
+++ b/prewikka/htdocs/css/style.less
@@ -529,7 +529,7 @@ div.prewikka-view-config {
     background-color: @fieldset-background;
     position: fixed;
     right: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 
